Fix alignment of in your browser boxes

--- a/core/app/assets/stylesheets/pages/in-your-browser.scss
+++ b/core/app/assets/stylesheets/pages/in-your-browser.scss
@@ -19,6 +19,10 @@
   @include respond-to(420) {
     width: 80%;
     margin: 0;
+
+    &:first-child {
+      margin: 0;
+    }
   }
 }
 
